--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,13 @@ serde_json = "*"
 
 #bincode = "*"
 #serde_cbor = "0.11.2"
-
 tch = "0.8.0"
-
 
 anyhow = "*"
 
 nalgebra = "0.31.1"
 
-ndarray = "*"
+#ndarray = "*"
 #ndarray-linalg = { version = "*", features = ["intel-mkl-static"] }
 #ndarray-linalg = "*"
 
